--- a/bsnes/ui-qt/resource/resource.qrc
+++ b/bsnes/ui-qt/resource/resource.qrc
@@ -10,6 +10,7 @@
     <file alias="default_sfx.cpu.sym">../../data/default_sfx.cpu.sym</file>
     <file alias="default.smp.sym">../../data/default.smp.sym</file>
     <file alias="default.sa1.sym">../../data/default.sa1.sym</file>
+    <file alias="default.sgb.sym">../../data/default.sgb.sym</file>
 
     <file alias="logo.png">../data/logo.png</file>
     <file alias="documentation.html">../data/documentation.html</file>
