DSP register names for breakpoint editor

--- a/bsnes/ui-qt/resource/resource.qrc
+++ b/bsnes/ui-qt/resource/resource.qrc
@@ -9,6 +9,7 @@
     <file alias="default_sa1.cpu.sym">../../data/default_sa1.cpu.sym</file>
     <file alias="default_sfx.cpu.sym">../../data/default_sfx.cpu.sym</file>
     <file alias="default.smp.sym">../../data/default.smp.sym</file>
+    <file alias="default.dsp.sym">../../data/default.dsp.sym</file>
     <file alias="default.sa1.sym">../../data/default.sa1.sym</file>
     <file alias="default.sgb.sym">../../data/default.sgb.sym</file>
 
